--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,16 +1,26 @@
+upstream frontend {
+  server frontend:8080;
+}
+
 server {
   listen 80;
   server_name localhost;
 
+  index index.php index.html;
+
   rewrite ^([^.]*[^/])$ $scheme://$host$1/ permanent;
   
-  location /pm {
-    rewrite ^/pm(.*) https://app.clickup.com/14370612/home redirect;
-  }
+  # location /pm {
+  #   rewrite ^/pm(.*) https://app.clickup.com/14370612/home redirect;
+  # }
 
-  location /webhook {
-    proxy_redirect  http://webhook http://webhook/;
-    proxy_redirect  https://webhook https://webhook/;
-    proxy_pass http://webhook:8090/;
+  # location /webhook {
+  #   proxy_redirect  http://webhook http://webhook/;
+  #   proxy_redirect  https://webhook https://webhook/;
+  #   proxy_pass http://webhook:8090/;
+  # }
+
+  location / {
+      proxy_pass http://frontend;
   }
 }
