--- a/FrontendApplication/package.json
+++ b/FrontendApplication/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
+    "troisjs": "^0.3.4",
     "vue": "^3.2.13",
+    "vue-3d-loader": "^2.1.4",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
