--- a/FrontendApplication/Dockerfile
+++ b/FrontendApplication/Dockerfile
@@ -17,7 +17,7 @@ RUN npm install
 COPY . .
 
 # build app for production with minification
-RUN npm run build
+RUN npm run build_docker
 
 EXPOSE 8080
 CMD [ "http-server", "dist" ]
