--- a/ApiGateway/.env.development
+++ b/ApiGateway/.env.development
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=12333
 # Defined here
-PREPROCESSING_API_GATEWAY="http://localhost:12334"
-MODEL_GENERATOR_API_GATEWAY="http://localhost:12335"
-STORY_ANALYZER_API_GATEWAY="http://localhost:12336"
+PREPROCESSING_API_GATEWAY="http://127.0.0.1:12334" # TODO: Why does 'localhost' not work?
+MODEL_GENERATOR_API_GATEWAY="http://127.0.0.1:12335"
+STORY_ANALYZER_API_GATEWAY="http://127.0.0.1:12336"
