--- a/ApiGateway/package.json
+++ b/ApiGateway/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cors": "^2.8.4",
+    "dotenv": "^16.0.3",
     "dotenv-cli": "^7.0.0",
     "express": "^4.16.3"
   }
