Working Version with position and adj

--- a/FrontendApplication/.env.development
+++ b/FrontendApplication/.env.development
@@ -1,3 +1,3 @@
 # Must Follow Vue Env Formats (Starts with VUE_APP)
 # Reference: https://stackoverflow.com/questions/62616450/vue-js-project-not-loading-env-variables
-VUE_APP_API_SERVER_GATEWAY=http://localhost:12333
+VUE_APP_API_SERVER_GATEWAY=http://75.136.66.72:12333
