--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ upstream frontend {
 
 server {
   listen 80;
-  server_name localhost;
+  server_name 75.136.66.72;
 
   index index.php index.html;
 
